yaml/test-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns-hub
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns-spoke
