yaml/test-actions-deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment-hub
  namespace: test-ns-hub
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nginx
  template: 
    metadata: 
      labels: 
        app: nginx
    spec: 
      containers: 
      - name: nginx
        image: "acrakszup2kwh4fwbse.azurecr.io/test-ns-hub/nginx:v1"
        ports: 
        - containerPort: 80
#        resources: 
#          limits: 
#            cpu: "500m"
#            memory: "256Mi"
#          requests: 
#            cpu: "250m"
#            memory: "128Mi"
