yaml/test-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: test-ns-hub
spec:
  nodeSelector:
    agentpool: npuser01
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
    resources:
      requests:
        memory: "128Mi"
        cpu: "250m"
      limits:
        memory: "256Mi"
        cpu: "500m"
  restartPolicy: Always
