yaml/test-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-ns-hub-policy
  namespace: test-ns-hub
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test-ns-hub
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-ns-spoke-policy
  namespace: test-ns-spoke
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test-ns-spoke
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
